--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Bot Framework App Sample",
   "description": "Bot Framework App Sample",
-  "repository": "https://github.com/bluehope79/lovelybot",
+  "repository": "https://github.com/bluehope79/ynfaq",
   "keywords": ["bot framework", "bot", "heroku"]
 }
