--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 other:
-    app_client_id:4be3819e-c6f6-4b0b-a834-7f7c4e064d9d
-    app_client_secret:wIYVQV5941+$-@wxtzmsAB0
+    app_client_id:
+    app_client_secret:
